# MooerManager

./: CMakeLists.txt  CMakePresets.json  README.md  mooer.lua  vcpkg.json
.devcontainer/: Dockerfile.fedora_rawhide  Dockerfile.raspbian  Dockerfile.ubuntu
.devcontainer/fedora/: devcontainer.json
.devcontainer/raspbian/: devcontainer.json
.devcontainer/ubuntu/: Dockerfile.ubuntu  devcontainer.json
.github/workflows/: cmake.yml
cmake/: Findgumbo.cmake  Findhttplib.cmake  Findjack.cmake  Findlibusb.cmake  Findpipewire.cmake  debian.cmake
cmake/toolchains/: osx-llvm18.cmake
cmake/triplets/: arm64-osx.cmake  x64-osx.cmake
doc/: endpoints.txt
mooer.gui/: CMakeLists.txt  MooerManager.cc  MooerManager.h  MooerManager.ui  main.cc
mooer.gui/deb/: postinst  prerm
mooer.gui/resources/: MooerManager.desktop  MooerManager.plist  MooerManager.rc
mooer.lib/: 60-mooer.rules  CMakeLists.txt  GuitarPro.cc  GuitarPro.h  Jack.cc  Jack.h  Midi.cc  Midi.h  MooerParser.cc  MooerParser.h  Pipewire.cc  Pipewire.h  TeVirtualMidi.cc  TeVirtualMidi.h  UsbConnection.cc  UsbConnection.h  WaveFile.h
mooer.lib/midi/: Alsa.cc  Alsa.h  Jack.cc  Jack.h  Midi.cc  Midi.h  Pipewire.cc  Pipewire.h  TeVirtualMidi.cc  TeVirtualMidi.h  WindowsMultiMedia.cc  teVirtualMIDI64.def
triplets/: arm64-osx.cmake  x64-osx.cmake  x64-windows.cmake
